# animation-system

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/: CODEOWNERS
AnimationSystem/: AnimationSystem.cpp  AnimationSystem.hpp  CMakeLists.txt
AnimationSystem/Animation/: Animation.h  AnimationClip.cpp  AnimationClip.hpp  AnimationSample.hpp  AnimationState.hpp  AssimpAnimation.cpp  AssimpAnimation.hpp  AssimpAnimationHandler.cpp  AssimpAnimationHandler.hpp  Blend.cpp  Blend.hpp  BlendOperations.cpp  BlendOperations.hpp  BlendThreshold.cpp  BlendThreshold.hpp  BlendTree.cpp  BlendTree.hpp  BlendTreeParser.cpp  BlendTreeParser.hpp  BlendWeight.cpp  BlendWeight.hpp  Joint.hpp  JointMask.hpp  JointPose.hpp  Manager.cpp  Manager.hpp  PoseBlender.cpp  PoseBlender.hpp  Skeleton.hpp  SkeletonPose.cpp  SkeletonPose.hpp  SkinnedVertex.hpp
AnimationSystem/Base/: Base.h  Component.hpp  Entity.cpp  Entity.hpp  Math.cpp  Math.hpp  Quaternion.cpp  Quaternion.hpp
AnimationSystem/Core/: CommonConsts.hpp  Core.h  ResourceManager.cpp  ResourceManager.hpp
AnimationSystem/Core/Fs/: Reader.cpp  Reader.hpp
AnimationSystem/Core/Task/: Task.hpp
AnimationSystem/Renderer/: BufferHelper.cpp  BufferHelper.hpp  Camera.cpp  Camera.hpp  Import.cpp  Import.hpp  Mesh.cpp  Mesh.hpp  MetalFrameDebugger.cpp  MetalFrameDebugger.hpp  MetalRenderer.cpp  MetalRenderer.hpp  RenderPass.cpp  RenderPass.hpp  Renderer.h  RendererManager.cpp  RendererManager.hpp  Scene.cpp  Scene.hpp
AnimationSystem/Renderer/Shader/: ShaderLibrary.cpp  ShaderLibrary.hpp  ShaderResource.cpp  ShaderResource.hpp  ShaderTypes.hpp
AnimationSystem/Renderer/Shapes/: Cube.cpp  Cube.hpp
AnimationSystem/Renderer/Texture/: Texture.hpp
core/: AnimationSystem.h  CMakeLists.txt
core/fs/: FS.h  Reader.cpp  Reader.hpp
core/task/: Task.hpp
docs/: CharacterAnimation.mov
examples/: CMakeLists.txt
examples/_commons/: App.cpp  ExampleAppDelegate.cpp  ExampleAppDelegate.hpp
examples/anim_sys_demo/: CMakeLists.txt  CoreTestViewDelegate.cpp  CoreTestViewDelegate.hpp
examples/anim_sys_demo/blend_specifications/: locomotion.b3  locomotion.json
examples/imgui_glfw_metal_demo/: CMakeLists.txt  demo.mm
examples/metal_demo/: App.cpp  CMakeLists.txt  ExampleAppDelegate.cpp  ExampleAppDelegate.hpp  ExampleViewDelegate.cpp  ExampleViewDelegate.hpp  Math.hpp  Renderer.cpp  Renderer.hpp  ShaderTypes.hpp
examples/metal_demo/basic_shapes/: Cube.hpp
examples/metal_glfw_imgui_demo/: CMakeLists.txt  app.cpp
examples/shaders/: color_helpers.metal  common_layouts.metal  example_shader.glsl  example_shader.metal  mandelbrot.metal  phong_shader.metal
scripts/: build_example.py  run_example.py
